Exp-1/output/f00646_cleanup_text_test.err
  File "output/f00646_cleanup_text_test.py", line 2
    >>> inputs = {"normalized_text": "àçèëíïöü"}
    ^
SyntaxError: invalid syntax
